Make the Views bookmark code use the correct Mac code.

Do assorted other bits of cleanup as well.

BUG=891194, 867553

Change-Id: I9f74c14c468819d882b38a959035ec8c1c4a2c1a
Reviewed-on: https://chromium-review.googlesource.com/c/1258183
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596840}