components/bookmarks/browser/bookmark_node_data.cc
@@ -16,8 +16,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace bookmarks {
 
+#if !defined(OS_MACOSX)
 const char BookmarkNodeData::kClipboardFormatString[] =
     "chromium/x-bookmark-entries";
+#endif
 
 BookmarkNodeData::Element::Element() : is_url(false), id_(0) {
 }
@@ -40,6 +42,7 @@ BookmarkNodeData::Element::Element(const Element& other) = default;
 BookmarkNodeData::Element::~Element() {
 }
 
+#if !defined(OS_MACOSX)
 void BookmarkNodeData::Element::WriteToPickle(base::Pickle* pickle) const {
   pickle->WriteBool(is_url);
   pickle->WriteString(url.spec());
@@ -98,6 +101,7 @@ bool BookmarkNodeData::Element::ReadFromPickle(base::PickleIterator* iterator) {
   }
   return true;
 }
+#endif
 
 // BookmarkNodeData -----------------------------------------------------------
 
@@ -240,7 +244,6 @@ bool BookmarkNodeData::ReadFromClipboard(ui::ClipboardType type) {
 
   return false;
 }
-#endif
 
 void BookmarkNodeData::WriteToPickle(const base::FilePath& profile_path,
                                      base::Pickle* pickle) const {
@@ -268,6 +271,8 @@ bool BookmarkNodeData::ReadFromPickle(base::Pickle* pickle) {
 
   return true;
 }
+
+#endif  // OS_MACOSX
 
 std::vector<const BookmarkNode*> BookmarkNodeData::GetNodes(
     BookmarkModel* model,
