components/bookmarks/browser/bookmark_pasteboard_helper_mac.mm
@@ -18,10 +18,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/base/clipboard/clipboard.h"
 #include "ui/base/clipboard/clipboard_util_mac.h"
 
+namespace bookmarks {
+
 NSString* const kUTTypeChromiumBookmarkDictionaryList =
     @"org.chromium.bookmark-dictionary-list";
-
-namespace bookmarks {
 
 namespace {
 
@@ -112,10 +112,18 @@ void ConvertNSArrayToElements(
     }
 
     BookmarkNodeData::Element e = BookmarkNodeData::Element(new_node.get());
+    // BookmarkNodeData::Element::ReadFromPickle explicitly zeroes out the two
+    // date fields so do so too. TODO(avi): Refactor this code to be a member
+    // function of BookmarkNodeData::Element so that it can write the id_ field
+    // directly and avoid the round-trip through BookmarkNode.
+    e.date_added = base::Time();
+    e.date_folder_modified = base::Time();
+
     if (is_folder) {
       ConvertNSArrayToElements([bookmark_dict objectForKey:kChildrenKey],
                                &e.children);
     }
+
     elements->push_back(e);
   }
 }
@@ -246,25 +254,6 @@ base::scoped_nsobject<NSPasteboardItem> WriteSimplifiedBookmarkTypes(
   return item;
 }
 
-NSPasteboard* PasteboardFromType(ui::ClipboardType type) {
-  NSString* type_string = nil;
-  switch (type) {
-    case ui::CLIPBOARD_TYPE_COPY_PASTE:
-      type_string = NSGeneralPboard;
-      break;
-    case ui::CLIPBOARD_TYPE_DRAG:
-      type_string = NSDragPboard;
-      break;
-    case ui::CLIPBOARD_TYPE_SELECTION:
-      NOTREACHED();
-      break;
-  }
-
-  return [NSPasteboard pasteboardWithName:type_string];
-}
-
-}  // namespace
-
 NSPasteboardItem* PasteboardItemFromBookmarks(
     const std::vector<BookmarkNodeData::Element>& elements,
     const base::FilePath& profile_path) {
@@ -278,25 +267,24 @@ NSPasteboardItem* PasteboardItemFromBookmarks(
   return item.autorelease();
 }
 
+}  // namespace
+
 void WriteBookmarksToPasteboard(
-    ui::ClipboardType type,
+    NSPasteboard* pb,
     const std::vector<BookmarkNodeData::Element>& elements,
     const base::FilePath& profile_path) {
   if (elements.empty())
     return;
 
   NSPasteboardItem* item = PasteboardItemFromBookmarks(elements, profile_path);
-  NSPasteboard* pb = PasteboardFromType(type);
   [pb clearContents];
   [pb writeObjects:@[ item ]];
 }
 
 bool ReadBookmarksFromPasteboard(
-    ui::ClipboardType type,
+    NSPasteboard* pb,
     std::vector<BookmarkNodeData::Element>* elements,
     base::FilePath* profile_path) {
-  NSPasteboard* pb = PasteboardFromType(type);
-
   elements->clear();
   NSString* profile = [pb stringForType:kUTTypeChromiumProfilePath];
   *profile_path = base::FilePath(base::SysNSStringToUTF8(profile));
@@ -304,9 +292,7 @@ bool ReadBookmarksFromPasteboard(
          ReadWebURLsWithTitlesPboardType(pb, elements);
 }
 
-bool PasteboardContainsBookmarks(ui::ClipboardType type) {
-  NSPasteboard* pb = PasteboardFromType(type);
-
+bool PasteboardContainsBookmarks(NSPasteboard* pb) {
   NSArray* availableTypes = @[
     ui::ClipboardUtil::UTIForWebURLsAndTitles(),
     kUTTypeChromiumBookmarkDictionaryList
