ui/base/clipboard/clipboard_util_mac.h
@@ -10,6 +10,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/mac/scoped_nsobject.h"
 #include "base/memory/ref_counted.h"
+#include "ui/base/clipboard/clipboard_types.h"
 #include "ui/base/ui_base_export.h"
 
 namespace ui {
@@ -69,6 +70,9 @@ class UI_BASE_EXPORT ClipboardUtil {
   static bool URLsAndTitlesFromPasteboard(NSPasteboard* pboard,
                                           NSArray** urls,
                                           NSArray** titles);
+
+  // Gets the NSPasteboard specified from the clipboard type.
+  static NSPasteboard* PasteboardFromType(ui::ClipboardType type);
 };
 }
 
